--- a/frontend/src/Components/Nav.css
+++ b/frontend/src/Components/Nav.css
@@ -1,8 +1,7 @@
 .nav-container {
   width: 200px;
   height: 95vh;
-  margin: 2.5vh 20px;
-  padding: 0;
+  margin: 2.5vh 20px 2.5vh 0;
   display: flex;
   flex-direction: column;
   color: white;
