--- a/frontend/src/Components/Dashboard/Dashboard.css
+++ b/frontend/src/Components/Dashboard/Dashboard.css
@@ -1,4 +1,4 @@
-.container {
+.dashboard-container {
   display: flex;
   flex-direction: row;
   width: 90%;
@@ -22,9 +22,6 @@
   justify-content: center;
   width: 100%;
   margin: 0 auto;
-  /* position: relative;
-  z-index: -1;
-  left: -50%; */
   /* border: 2px solid black; */
 }
 
@@ -42,3 +39,7 @@
   width: 25%;
   justify-content: center;
 }
+
+/* .form-wrapper {
+  width: 50%;
+} */
