--- a/frontend/src/Components/ServicesForm/SugarForm.css
+++ b/frontend/src/Components/ServicesForm/SugarForm.css
@@ -1,10 +1,10 @@
-.container {
-  width: 80%;
-  min-height: 95vh;
-  margin: 2, 5vh auto;
+.form-container {
+  width: 90%;
+  height: 95vh;
+  margin: 0 auto;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  flex-direction: row;
+  /* align-items: flex-start; */
 }
 
 .back {
