--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,7 @@ body {
   -moz-osx-font-smoothing: grayscale; */
   box-sizing: border-box;
   font-family: 'Nunito', sans-serif;
+  background-color: white;
 }
 
 .main {
