--- a/frontend/src/Components/Login.css
+++ b/frontend/src/Components/Login.css
@@ -25,15 +25,17 @@ form {
   width: 85%;
   height: 85vh;
   border-radius: 30px 0 0 30px;
+  /* border-radius: 30px; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  /* margin: 0 auto; */
 }
 
 .login-form_control {
   min-width: 60%;
-  margin: 30px auto;
+  margin: 15px auto;
   display: inline-flex;
   flex-direction: column;
   align-items: flex-start;
@@ -61,6 +63,7 @@ form {
   border-bottom: 3px solid white;
   background-color: rgba(70, 70, 110);
   transition: all 0.2s ease-out;
+  border-radius: 0px;
 }
 
 input:focus {
