--- a/frontend/src/Components/ServicesForm/SugarForm.css
+++ b/frontend/src/Components/ServicesForm/SugarForm.css
@@ -42,7 +42,7 @@ form {
 }
 
 .main-value input {
-  color: black;
+  color: black !important;
   font-size: 20px;
   text-align: center;
   width: 80%;
@@ -52,12 +52,13 @@ form {
   border: none;
   border-bottom: 3px solid #a7c4bc;
   transition: all 0.2s ease-out;
+  background-color: #fbfbfb;
 }
 
 input:focus {
   outline: none;
   border-bottom: 3px solid #a7c4bc;
-  transition: all 0.2s linear;
+  /* transition: all 0.2s linear; */
   transform: scale(1);
 }
 .main-value label {
@@ -82,14 +83,15 @@ input:focus {
 }
 
 .form-input input {
-  color: black;
+  color: black !important;
   font-size: 16px;
   width: 100%;
   height: 20px;
   padding: 0 0 5px 0;
   border: none;
   border-bottom: 3px solid #a7c4bc;
-  transition: all 0.2s ease-out;
+  transition: 0.2s ease-out;
+  background-color: #fbfbfb;
 }
 
 .button {
