--- a/frontend/src/Components/Statistics/HorizontalServiceButtons.css
+++ b/frontend/src/Components/Statistics/HorizontalServiceButtons.css
@@ -28,6 +28,7 @@
   border-radius: 15px;
   cursor: pointer;
   filter: drop-shadow(0 0 0.1rem black);
+  transition: background-color 0.4s ease;
 }
 
 .row-item img {
