--- a/frontend/src/Components/Statistics/Pages/SugarPage.css
+++ b/frontend/src/Components/Statistics/Pages/SugarPage.css
@@ -5,7 +5,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* border: 2px solid black; */
 }
 
 .items-row {
@@ -15,6 +14,91 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.no-data-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.data-img {
+  height: 100px;
+  margin: 50px auto 0 auto;
+  filter: opacity(0.3);
+}
+
+.data-p {
+  color: rgba(0, 0, 0, 0.5);
+}
+
+hr {
+  width: 100%;
+}
+
+.export-btn {
+  width: 92%;
+  margin: 0 auto 2.5vh auto;
+}
+
+.export-btn button {
+  background-color: #fff;
+  color: black;
+  font-size: 16px;
+  margin: 0 20px 0 0;
+  padding: 10px 8px;
+  border-radius: 12px;
+  cursor: pointer;
+  text-align: center;
+  border: 2px solid #dd105e;
+  transition: background-color 0.3s ease;
+}
+
+.export-btn button:hover {
+  background-color: #dd105e;
+  color: white;
+}
+
+.desktop-row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.title-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 50px;
+  background-color: #eeeeee;
+  margin: 0 auto;
+  border-bottom: 2px solid gray;
+  border-radius: 5px 5px 0 0;
+}
+
+.title-row p {
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  margin: 0 20px;
+}
+
+.hide {
+  display: inherit;
+}
+
+@media only screen and (max-width: 1007px) {
+  .hide {
+    display: none;
+  }
+
+  .items-row {
+    border: none;
+  }
 }
 
 /* .title-row p {
@@ -50,34 +134,6 @@
   font-size: 18px;
 } */
 
-hr {
-  width: 95%;
-}
-
-.export-btn {
-  width: 92%;
-  margin: 0 auto 2.5vh auto;
-  /* border: 2px solid black; */
-}
-
-.export-btn button {
-  background-color: #fff;
-  color: black;
-  font-size: 16px;
-  margin: 0 20px 0 0;
-  padding: 10px 8px;
-  border-radius: 12px;
-  cursor: pointer;
-  /* outline: 2px solid #dd105e; */
-  text-align: center;
-  border: 2px solid #dd105e;
-}
-
-.export-btn button:hover {
-  background-color: #dd105e;
-  color: white;
-  transition-duration: 0.2s;
-}
 /* 
 @media only screen and (max-width: 1007px) {
   .title-row p {
