--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,10 @@
 @tailwind components;
 @tailwind utilities; */
 
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500&display=swap');
+ */
+
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500&display=swap');
 
 body {
   margin: 0;
@@ -14,8 +17,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; */
   box-sizing: border-box;
-  font-family: 'Nunito', sans-serif;
-  /* background-color: #ececec; */
+  /* font-family: 'Nunito', sans-serif; */
+  font-family: 'IBM Plex Sans', sans-serif;
   background-color: #fbfbfb;
 }
 
