--- a/frontend/src/Components/Statistics/Pages/Items/NewItem.css
+++ b/frontend/src/Components/Statistics/Pages/Items/NewItem.css
@@ -66,22 +66,25 @@
   height: 50px;
   margin: 0 auto;
   border: none;
+  background-color: #eee;
+  transition: background-color 0.3s ease-in-out;
 }
 
 .data-row p {
   font-size: 16px;
   color: rgba(0, 0, 0, 0.7);
-  /* width: 200px; */
   width: 100%;
-
   margin: 0 20px;
-  /* border: 2px solid; */
 }
 
 .desktop-row {
-  border-bottom: 2px solid gray;
-  margin: 5px auto;
-  background-color: #eee;
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  margin: 0 auto;
+  /* background-color: #eee; */
+}
+
+.desktop-row :hover {
+  background-color: #ccc;
 }
 
 .actions {
