--- a/frontend/src/Components/ServicesForm/SugarForm.css
+++ b/frontend/src/Components/ServicesForm/SugarForm.css
@@ -1,9 +1,10 @@
 .form-container {
-  width: 90%;
+  width: 75%;
   height: 95vh;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
+  background-color: white;
   /* align-items: flex-start; */
 }
 
