--- a/frontend/src/Components/Statistics/Pages/Items/NewItem.css
+++ b/frontend/src/Components/Statistics/Pages/Items/NewItem.css
@@ -17,7 +17,7 @@
   justify-content: center;
   text-align: center;
   background-color: #eeeeee;
-  border-radius: 15px;
+  border-radius: 10px;
   /* padding: 10px 10px; */
   cursor: pointer;
   box-shadow: 2px 0 5px -1px #888;
@@ -36,7 +36,7 @@
 }
 
 .item-data {
-  width: 80%;
+  width: 90%;
   height: 0px;
   overflow: hidden;
   margin: 0 auto;
@@ -44,11 +44,15 @@
 }
 
 .item-data p {
-  min-width: 90%;
+  width: 90%;
+  height: 20px;
   background-color: #fff;
-  margin: 15px 10px 15px 0;
+  margin: 10px auto;
   padding: 10px 10px;
-  border-radius: 10px;
+  border-radius: 7px;
+  border: 1px solid lightgray;
+  filter: drop-shadow(0 0 0.1rem lightgray);
+
   text-align: left;
   font-size: 14px;
 }
@@ -80,7 +84,6 @@
 .desktop-row {
   border-top: 1px solid rgba(0, 0, 0, 0.2);
   margin: 0 auto;
-  /* background-color: #eee; */
 }
 
 .desktop-row :hover {
@@ -95,6 +98,53 @@
   height: 16px;
   margin: 0 auto;
   cursor: pointer;
+}
+
+.span {
+  font-weight: 500;
+}
+
+.modal {
+  border: 2px black solid;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 999;
+  left: -50%;
+  top: -50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: opacity 0.3s ease;
+}
+
+.btn-group1 {
+  width: 95%;
+  margin: 0 auto;
+  /* border: 2px solid; */
+}
+
+.dropdown-btn {
+  width: 80px;
+  height: 40px;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-left: 20px;
+  margin: 10px 10px 20px 0;
+  text-align: center;
+  background-color: white;
+  border-radius: 8px;
+  border: 2px solid #dd105e;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  filter: drop-shadow(0 0 0.1rem lightgray);
+  transition: background 0.3s ease;
+}
+
+.dropdown-btn:hover {
+  background-color: lightgray;
+  transform: scale(0.98);
 }
 
 @media only screen and (max-width: 1007px) {
