--- a/frontend/src/Components/Statistics/Pages/SugarPage.css
+++ b/frontend/src/Components/Statistics/Pages/SugarPage.css
@@ -33,6 +33,7 @@
 
 hr {
   width: 100%;
+  margin: 0 auto;
 }
 
 .export-btn {
@@ -88,8 +89,66 @@ hr {
   margin: 0 20px;
 }
 
-.hide {
-  display: inherit;
+/* .hide {
+  opacity: 0;
+} */
+
+.modal {
+  border: 2px black solid;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 999;
+  left: -50%;
+  top: -50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: opacity 0.3s ease;
+}
+
+.offscreen {
+  /* display: none; */
+  opacity: 0;
+  transition: opacity 1s ease;
+}
+
+.sucmsg {
+  width: calc(100% - 30px);
+  background-color: #c3e5ae;
+  color: black;
+  font-weight: 500;
+  font-size: 14px;
+  padding: 10px;
+  margin: 10px auto;
+  border-left: 10px solid #97dbae;
+  border-radius: 3px;
+  transition: opacity 0.3s ease;
+  top: -50%;
+  left: -50%;
+  transform: (0%, 50%);
+}
+
+.sucContainer {
+  height: 0px;
+  width: calc(100% - 10px);
+  margin: 0 auto;
+}
+
+.errorMsg {
+  width: calc(100% - 30px);
+  height: 0;
+  background-color: #ffb5b5;
+  color: black;
+  font-weight: 500;
+  font-size: 14px;
+  padding: 10px;
+  margin: 10px auto;
+  border-left: 10px solid #ff7272;
+  border-radius: 3px;
+  transition: opacity 0.3s ease;
+  top: -50%;
+  left: -50%;
+  transform: (0%, 50%);
 }
 
 @media only screen and (max-width: 1007px) {
