--- a/frontend/src/Components/Dashboard/Dashboard.css
+++ b/frontend/src/Components/Dashboard/Dashboard.css
@@ -33,7 +33,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 75%;
+  width: 70%;
   margin: 0 auto;
 }
 
@@ -54,6 +54,19 @@
 /* .form-wrapper {
   width: 50%;
 } */
+
+.modal {
+  border: 2px black solid;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 999;
+  left: -50%;
+  top: -50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: opacity 0.3s ease;
+}
 
 @media only screen and (max-width: 1007px) {
   .wrapper {
