--- a/frontend/src/Components/Dashboard/Widgets/Chart.css
+++ b/frontend/src/Components/Dashboard/Widgets/Chart.css
@@ -1,10 +1,10 @@
 .graph {
-  width: 96%;
+  width: 95%;
   height: 250px;
   margin: 10px auto;
   background-color: #ffffff;
-  border-radius: 30px;
-  box-shadow: 2px 0 10px -3px #888;
+  border-radius: 20px;
+  box-shadow: 2px 0 10px -2px lightgray;
 }
 
 .chart {
