--- a/frontend/src/Components/ServicesForm/SugarForm.css
+++ b/frontend/src/Components/ServicesForm/SugarForm.css
@@ -1,11 +1,12 @@
 .form-container {
   width: 75%;
-  height: 95vh;
-  margin: 0 auto;
+  height: 90%;
+  margin: 5vh auto;
   display: flex;
   flex-direction: row;
-  background-color: white;
-  /* align-items: flex-start; */
+  background-color: #fbfbfb;
+  font-size: 16px;
+  border-radius: 10px;
 }
 
 .back {
