new login/register - fix modal height / scroll

--- a/frontend/src/Components/Dashboard/Dashboard.css
+++ b/frontend/src/Components/Dashboard/Dashboard.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0 auto;
 }
 
@@ -60,6 +60,17 @@
   transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.5);
   transition: opacity 0.3s ease;
+  overflow-y: auto;
+}
+
+.modal::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.modal {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 .loader {
