--- a/frontend/src/Components/Dashboard/InfoModal.css
+++ b/frontend/src/Components/Dashboard/InfoModal.css
@@ -1,6 +1,6 @@
 .info-form-container {
   width: 40%;
-  height: 90%;
+  min-height: 90vh;
   margin: 5vh auto;
   display: flex;
   flex-direction: row;
@@ -16,7 +16,7 @@ form {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
+  margin: 2vh auto;
 }
 
 input::-webkit-outer-spin-button,
