--- a/frontend/src/Components/Dashboard/Dashboard.css
+++ b/frontend/src/Components/Dashboard/Dashboard.css
@@ -83,6 +83,34 @@
   transform: translate(50%, -50%);
 }
 
+.top-msg {
+  display: flex;
+  align-items: center;
+}
+
+.logout-user {
+  display: none;
+}
+
+.logout-user img {
+  width: 28px;
+  margin: 0 auto;
+}
+
+.logout-user p {
+  width: 100px;
+  font-size: 18px;
+  height: 0;
+  text-align: left;
+  margin: 0 auto;
+  background-color: transparent;
+  box-shadow: 0px 0px 16px -6px lightgray;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  padding-right: 10px;
+}
+
 @media only screen and (max-width: 1007px) {
   .wrapper {
     max-width: 90%;
@@ -117,5 +145,11 @@
 
   .horizontal-pie {
     display: inherit;
+  }
+
+  .logout-user {
+    width: 120px;
+    display: flex;
+    flex-direction: column;
   }
 }
