--- a/frontend/src/Components/Login2.css
+++ b/frontend/src/Components/Login2.css
@@ -3,14 +3,22 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .form-wrapper {
   width: 50%;
+  margin: 5vh auto;
   min-height: 80vh;
   background-color: rgba(70, 70, 110);
   border-radius: 20px;
   box-shadow: 0px 0px 16px -6px #000000;
+}
+
+.form-group a {
+  color: white;
+  font-size: 14px;
 }
 
 .login-form {
@@ -73,6 +81,22 @@
   display: flex;
   flex-direction: column;
   margin: 20px auto;
+}
+.regSuc {
+  width: 350px;
+  min-height: 50vh;
+  margin: 25vh auto;
+  background-color: #fff;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.regSuc button {
+  width: 200px !important;
+  height: 50px;
 }
 
 @media only screen and (max-width: 1007px) {
