--- a/frontend/src/Components/Settings/Settings.css
+++ b/frontend/src/Components/Settings/Settings.css
@@ -81,7 +81,12 @@
   transition: all 0.4s ease;
 }
 
-.set input:focus {
+.settings-item input:focus {
+  background-color: #ccc;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.settings-item select:focus {
   background-color: #ccc;
 }
 
