--- a/frontend/src/Components/Landing.css
+++ b/frontend/src/Components/Landing.css
@@ -156,12 +156,18 @@ h1.hero-h1 {
   align-items: center;
   transition: all 0.2s linear;
 }
+/* .card-1 img,
+.card-2 img,
+.card-3 img {
+  transition: all 0.2s linear;
+} */
 
 .card-1:hover,
 .card-2:hover,
 .card-3:hover {
   transform: scale(1.05);
-  box-shadow: 2px 0 10px -2px lightgray;
+  box-shadow: 2px 0 8px -3px lightgray;
+  border-radius: 10px;
 }
 
 .card-1 img,
@@ -311,9 +317,9 @@ h1.hero-h1 {
   .card-1,
   .card-2,
   .card-3 {
-    width: 100%;
-    min-height: 20vh;
-    margin: 50px auto;
+    width: 80%;
+    min-height: 18vh;
+    margin: 20px auto;
   }
 
   .card-1 img,
@@ -475,9 +481,10 @@ h1.hero-h1 {
   .card-1,
   .card-2,
   .card-3 {
-    width: 100%;
-    min-height: 25vh;
+    width: 85%;
+    min-height: 20vh;
     margin: 0 auto;
+    border: 2px solid;
   }
 
   .card-1 img,
